# cosmic-applets

./: Cargo.toml
cosmic-applet-weather/: Cargo.toml
cosmic-applet-weather/src/: applet.rs  backend.rs  error.rs  lib.rs  localize.rs  main.rs  weather.rs
cosmic-applet-weather/src/backend/: wttr_in.rs
cosmic-applet-weather/src/weather/: condition.rs  moon.rs  temperature.rs  wind_speed.rs
cosmic-applets/: Cargo.toml
cosmic-applets/src/: main.rs
